// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Settings rendering tests Settings - section account - test 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-8 lg:grid-cols-12"
    data-testid="settings-view"
  >
    <aside
      class="lg:col-span-3"
      data-testid="navigation"
    >
      <nav
        class="sticky top-8 space-y-1 rounded-lg border bg-card p-4 shadow-sm"
      >
        <div
          data-testid="user-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Konto
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="general-link"
            href="general"
          >
            <span
              class="font-medium"
            >
              Allgemein
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all bg-primary text-primary-foreground shadow-sm"
            data-testid="account-link"
            href="account"
          >
            <span
              class="font-medium"
            >
              Konto
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="subscription-link"
            href="subscription"
          >
            <span
              class="font-medium"
            >
              Abrechnung
            </span>
          </a>
        </div>
        <div
          class="mt-4"
          data-testid="content-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Inhalt
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="template-fields-link"
            href="template-fields"
          >
            <span
              class="font-medium"
            >
              Vorlagen-Felder
            </span>
          </a>
        </div>
      </nav>
    </aside>
    <main
      class="lg:col-span-9"
    >
      <div
        data-testid="account-settings"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm border-destructive"
          data-slot="card"
          data-testid="delete-account"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
            data-slot="card-header"
          >
            <div
              class="flex items-center gap-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-triangle-alert h-5 w-5 text-destructive"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                />
                <path
                  d="M12 9v4"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
              <div
                class="leading-none font-semibold text-destructive"
                data-slot="card-title"
              >
                Gefahrenbereich
              </div>
            </div>
            <div
              class="text-muted-foreground text-sm"
              data-slot="card-description"
            >
              Dauerhafte Aktionen für Ihr Konto
            </div>
          </div>
          <div
            class="px-6"
            data-slot="card-content"
          >
            <div>
              <h3
                class="text-sm font-medium mb-1"
              >
                Konto löschen
              </h3>
              <p
                class="text-sm text-muted-foreground mb-4"
              >
                Löschen Sie Ihr Konto dauerhaft und alle zugehörigen Daten. Diese Aktion kann nicht rückgängig gemacht werden.
              </p>
              <div
                data-slot="alert-dialog"
                data-testid="mock-react-alert-dialog-root"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-white hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
                  data-slot="button"
                  data-testid="delete-btn"
                >
                  Konto löschen
                </button>
                <div
                  data-slot="alert-dialog-portal"
                  data-testid="mock-react-alert-dialog-portal"
                >
                  <div
                    class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                    data-slot="alert-dialog-overlay"
                    data-testid="mock-react-alert-dialog-overlay"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Settings rendering tests Settings - section general - rendered - test 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-8 lg:grid-cols-12"
    data-testid="settings-view"
  >
    <aside
      class="lg:col-span-3"
      data-testid="navigation"
    >
      <nav
        class="sticky top-8 space-y-1 rounded-lg border bg-card p-4 shadow-sm"
      >
        <div
          data-testid="user-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Konto
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all bg-primary text-primary-foreground shadow-sm"
            data-testid="general-link"
            href="general"
          >
            <span
              class="font-medium"
            >
              Allgemein
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="account-link"
            href="account"
          >
            <span
              class="font-medium"
            >
              Konto
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="subscription-link"
            href="subscription"
          >
            <span
              class="font-medium"
            >
              Abrechnung
            </span>
          </a>
        </div>
        <div
          class="mt-4"
          data-testid="content-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Inhalt
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="template-fields-link"
            href="template-fields"
          >
            <span
              class="font-medium"
            >
              Vorlagen-Felder
            </span>
          </a>
        </div>
      </nav>
    </aside>
    <main
      class="lg:col-span-9"
    >
      <div
        class="flex-col space-y-6"
        data-testid="general-settings"
      >
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
          data-slot="card"
          data-testid="user-profile"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
            data-slot="card-header"
          >
            <div
              class="leading-none font-semibold"
              data-slot="card-title"
            >
              Profil
            </div>
            <div
              class="text-muted-foreground text-sm"
              data-slot="card-description"
            >
              Verwalten Sie Ihre persönlichen Informationen
            </div>
          </div>
          <div
            class="px-6"
            data-slot="card-content"
          >
            <form
              class="space-y-6"
            >
              <div
                class="grid gap-2"
                data-slot="form-item"
                data-testid="name"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium"
                  data-error="false"
                  data-slot="form-label"
                  for="_r_0_-form-item"
                >
                  Name
                </label>
                <div
                  aria-describedby="_r_0_-form-item-description"
                  aria-invalid="false"
                  class="relative"
                  data-slot="form-control"
                  id="_r_0_-form-item"
                >
                  <div
                    class="absolute top-1/2 left-3 -translate-y-1/2 text-muted-foreground"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-user h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                      />
                      <circle
                        cx="12"
                        cy="7"
                        r="4"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="name"
                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-11 pl-10"
                    data-slot="input"
                    data-testid="name-input"
                    id="name"
                    name="name"
                    value="name-1"
                  />
                </div>
              </div>
              <div
                class="grid gap-2"
                data-slot="form-item"
                data-testid="email"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium"
                  data-error="false"
                  data-slot="form-label"
                  for="_r_1_-form-item"
                >
                  E-Mail-Adresse
                </label>
                <input
                  aria-describedby="_r_1_-form-item-description"
                  aria-invalid="false"
                  class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-11 cursor-not-allowed bg-muted"
                  data-slot="form-control"
                  disabled=""
                  id="_r_1_-form-item"
                  value="test@email.com"
                />
                <p
                  class="text-xs text-muted-foreground"
                >
                  Ihre E-Mail-Adresse kann nicht geändert werden
                </p>
              </div>
              <div
                class="flex justify-end"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
                  data-slot="button"
                  data-testid="submit-btn"
                  type="submit"
                >
                  Aktualisieren
                </button>
              </div>
            </form>
          </div>
        </div>
        <div
          class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
          data-slot="card"
          data-testid="update-password"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
            data-slot="card-header"
          >
            <div
              class="leading-none font-semibold"
              data-slot="card-title"
            >
              Sicherheit
            </div>
            <div
              class="text-muted-foreground text-sm"
              data-slot="card-description"
            >
              Ändern Sie Ihr Passwort
            </div>
          </div>
          <div
            class="px-6"
            data-slot="card-content"
          >
            <form
              class="space-y-6"
            >
              <div
                class="grid gap-2"
                data-slot="form-item"
                data-testid="currentPassword"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium"
                  data-error="false"
                  data-slot="form-label"
                  for="_r_2_-form-item"
                >
                  Aktuelles Passwort
                </label>
                <div
                  aria-describedby="_r_2_-form-item-description"
                  aria-invalid="false"
                  class="relative"
                  data-slot="form-control"
                  id="_r_2_-form-item"
                >
                  <div
                    class="absolute top-1/2 left-3 -translate-y-1/2 text-muted-foreground"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-lock h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="11"
                        rx="2"
                        ry="2"
                        width="18"
                        x="3"
                        y="11"
                      />
                      <path
                        d="M7 11V7a5 5 0 0 1 10 0v4"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="current-password"
                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-11 pr-10 pl-10"
                    data-slot="input"
                    data-testid="currentPassword-input"
                    id="currentPassword"
                    name="currentPassword"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Passwort anzeigen"
                    class="absolute top-1/2 right-3 -translate-y-1/2 rounded p-0.5 text-muted-foreground transition-colors hover:text-foreground focus:ring-2 focus:ring-primary/20 focus:outline-none"
                    data-testid="currentPassword-visibility-btn"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-eye h-4 w-4"
                      data-testid="eye-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="3"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="grid gap-2"
                data-slot="form-item"
                data-testid="newPassword"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium"
                  data-error="false"
                  data-slot="form-label"
                  for="_r_3_-form-item"
                >
                  Neues Passwort
                </label>
                <div
                  aria-describedby="_r_3_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  id="_r_3_-form-item"
                >
                  <div
                    class="relative"
                  >
                    <div
                      class="absolute top-1/2 left-3 -translate-y-1/2 text-muted-foreground"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-lock h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="11"
                          rx="2"
                          ry="2"
                          width="18"
                          x="3"
                          y="11"
                        />
                        <path
                          d="M7 11V7a5 5 0 0 1 10 0v4"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      autocomplete="new-password"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-11 pr-10 pl-10"
                      data-slot="input"
                      data-testid="newPassword-input"
                      id="newPassword"
                      name="newPassword"
                      type="password"
                      value=""
                    />
                    <button
                      aria-label="Passwort anzeigen"
                      class="absolute top-1/2 right-3 -translate-y-1/2 rounded p-0.5 text-muted-foreground transition-colors hover:text-foreground focus:ring-2 focus:ring-primary/20 focus:outline-none"
                      data-testid="newPassword-visibility-btn"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-eye h-4 w-4"
                        data-testid="eye-icon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="3"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="grid gap-2"
                data-slot="form-item"
                data-testid="confirmPassword"
              >
                <label
                  class="flex items-center gap-2 select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive text-sm font-medium"
                  data-error="false"
                  data-slot="form-label"
                  for="_r_4_-form-item"
                >
                  Passwort bestätigen
                </label>
                <div
                  aria-describedby="_r_4_-form-item-description"
                  aria-invalid="false"
                  class="relative"
                  data-slot="form-control"
                  id="_r_4_-form-item"
                >
                  <div
                    class="absolute top-1/2 left-3 -translate-y-1/2 text-muted-foreground"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-lock h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="11"
                        rx="2"
                        ry="2"
                        width="18"
                        x="3"
                        y="11"
                      />
                      <path
                        d="M7 11V7a5 5 0 0 1 10 0v4"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    autocomplete="new-password"
                    class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-11 pr-10 pl-10"
                    data-slot="input"
                    data-testid="confirmPassword-input"
                    id="confirmPassword"
                    name="confirmPassword"
                    type="password"
                    value=""
                  />
                  <button
                    aria-label="Passwort anzeigen"
                    class="absolute top-1/2 right-3 -translate-y-1/2 rounded p-0.5 text-muted-foreground transition-colors hover:text-foreground focus:ring-2 focus:ring-primary/20 focus:outline-none"
                    data-testid="confirmPassword-visibility-btn"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-eye h-4 w-4"
                      data-testid="eye-icon"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="3"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="flex justify-end"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
                  data-slot="button"
                  data-testid="submit-btn"
                  type="submit"
                >
                  Passwort ändern
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Settings rendering tests Settings - section global-template-fields - test 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-8 lg:grid-cols-12"
    data-testid="settings-view"
  >
    <aside
      class="lg:col-span-3"
      data-testid="navigation"
    >
      <nav
        class="sticky top-8 space-y-1 rounded-lg border bg-card p-4 shadow-sm"
      >
        <div
          data-testid="user-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Konto
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="general-link"
            href="general"
          >
            <span
              class="font-medium"
            >
              Allgemein
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="account-link"
            href="account"
          >
            <span
              class="font-medium"
            >
              Konto
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="subscription-link"
            href="subscription"
          >
            <span
              class="font-medium"
            >
              Abrechnung
            </span>
          </a>
        </div>
        <div
          class="mt-4"
          data-testid="content-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Inhalt
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="template-fields-link"
            href="template-fields"
          >
            <span
              class="font-medium"
            >
              Vorlagen-Felder
            </span>
          </a>
        </div>
      </nav>
    </aside>
    <main
      class="lg:col-span-9"
    >
      <div
        data-testid="global-template-fields"
      />
    </main>
  </div>
</div>
`;

exports[`Settings rendering tests Settings - section subscription - test 1`] = `
<div>
  <div
    class="grid grid-cols-1 gap-8 lg:grid-cols-12"
    data-testid="settings-view"
  >
    <aside
      class="lg:col-span-3"
      data-testid="navigation"
    >
      <nav
        class="sticky top-8 space-y-1 rounded-lg border bg-card p-4 shadow-sm"
      >
        <div
          data-testid="user-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Konto
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="general-link"
            href="general"
          >
            <span
              class="font-medium"
            >
              Allgemein
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="account-link"
            href="account"
          >
            <span
              class="font-medium"
            >
              Konto
            </span>
          </a>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all bg-primary text-primary-foreground shadow-sm"
            data-testid="subscription-link"
            href="subscription"
          >
            <span
              class="font-medium"
            >
              Abrechnung
            </span>
          </a>
        </div>
        <div
          class="mt-4"
          data-testid="content-group"
        >
          <p
            class="mb-1 px-3 text-xs font-semibold tracking-wider text-muted-foreground uppercase"
          >
            Inhalt
          </p>
          <a
            class="flex w-full cursor-pointer items-center gap-3 rounded-md px-3 py-2 text-sm transition-all hover:bg-accent hover:text-accent-foreground"
            data-testid="template-fields-link"
            href="template-fields"
          >
            <span
              class="font-medium"
            >
              Vorlagen-Felder
            </span>
          </a>
        </div>
      </nav>
    </aside>
    <main
      class="lg:col-span-9"
    >
      <div
        data-testid="subscription"
      />
    </main>
  </div>
</div>
`;
